first change commit

--- a/playground/index.html
+++ b/playground/index.html
@@ -5,6 +5,10 @@
     </head>
 
     <body>
-       Hello everyone, this is my webpage! 
+       Hello everyone, this is my webpage! My name is Max Aikins and this WAD.
+       <ul>
+            <li>yea</li>
+            
+       </ul>
     </body>
 </html>
