--- a/playground/1-team-website/schedule.html
+++ b/playground/1-team-website/schedule.html
@@ -72,7 +72,8 @@
 
             </tr>
       </table>
-
+<br>
+<br>
       <table border="1">
 
         <tr>
@@ -89,9 +90,9 @@
             <td>October 1</td>
             <td>October 2</td>
             <td>October 3</td>
-            <td>October 4</td>
+            <td>October 4 Home game 4:00pm Opponent: Duxbury Highschool Results: Pending</td>
             <td>October 5</td>
-            <td>October 6</td>
+            <td>October 6 Home Game 4:00pm Opponent: Plymouth North Highschool Results: Pending</td>
             <td>October 7</td>
 
         </tr>
@@ -101,43 +102,33 @@
             <td>October 9</td>
             <td>October 10</td>
             <td>October 11</td>
-            <td>October 12</td>
+            <td>October 12 Game @ Scituate Highschool turf 1 5:30pm Results Pending</td>
             <td>October 13</td>
-            <td>October 14</td>
+            <td>October 14 Game @ Silver lake Regional Highschool 4:00pm Results: Pending</td>
         </tr>
 
         <tr>
             <td>October 15</td>
             <td>October 16</td>
-            <td>October 17</td>
+            <td>October 17 Home game 4:00 Opponent: Pembroke Highschool Results: Pending</td>
             <td>October 18</td>
-            <td>October 19</td>
+            <td>October 19 Game @ Marshfield Highschool Turf 4:00pm Results: Pending</td>
             <td>October 20</td>
-            <td>October 21</td>
+            <td>October 21 Home game 4:00pm Opponent: Whitman-Hanson Regional Highschool Results: Pending</td>
 
         </tr>
 
         <tr>
             <td>October 22</td>
             <td>October 23</td>
-            <td>October 24</td>
+            <td>October 24 Game @ Duxbury Highschool Turf 4:00 Results: Pending</td>
             <td>October 25</td>
-            <td>October 26</td>
+            <td>October 26 Game @ Plymouth South Highschool Field B Results: Pending</td>
             <td>October 27</td>
             <td>October 28</td>
 
         </tr>
 
-        <tr>
-            <td>October 29</td>
-            <td>October 30</td>
-            <td>October 31</td>
-            <td>November 1</td>
-            <td>November 2</td>
-            <td>November 3</td>
-            <td>November 4</td>
-
-        </tr>
   </table>
     </body>
 </html>
