--- a/playground/1-team-website/schedule.html
+++ b/playground/1-team-website/schedule.html
@@ -130,5 +130,14 @@
         </tr>
 
   </table>
+  <a  href="Media.html">
+    <h1> Media Page</h1>
+</a>
+<a  href="roster.html">
+    <h1> Roster Page</h1>
+</a>
+<a  href="Index.html">
+    <h1> Home Page</h1>
+</a>
     </body>
 </html>
