--- a/1-team-website/media.html
+++ b/1-team-website/media.html
@@ -27,5 +27,8 @@
         <a class="bottom-page-links" href="Index.html">
             <h1> Home Page</h1>
         </a>
+        <a class="logo">
+            <img src="https://www.hanoverschools.org/sites/g/files/vyhlif3221/f/styles/group_main_image/public/departments/hanoverhawk1.jpg?itok=kRMrN4Y0">
+        </a>
     </body>
 </html>
